@@ -26,6 +26,17 @@ True
 >>> related.related
 ()
 
+The source has not changed:
+
+>>> import lxml.etree
+>>> print lxml.etree.tostring(content.xml, pretty_print=True)
+<testtype xmlns:py="http://codespeak.net/lxml/objectify/pytype">
+  <head>
+    <references/>
+   </head>
+  <body/>
+</testtype>
+
 
 Add a related content:
 
@@ -37,7 +48,6 @@ Add a related content:
 
 Let's have a look at the source:
 
->>> import lxml.etree
 >>> print lxml.etree.tostring(content.xml, pretty_print=True)
 <testtype xmlns:py="http://codespeak.net/lxml/objectify/pytype">
   <head>
@@ -296,6 +306,18 @@ After sending the event the metadata is updated:
   <body/>
 </testtype>
 
+
+When we remove the relateds they're of course removed from the XML:
+
+>>> related.related = ()
+>>> print lxml.etree.tostring(content.xml, pretty_print=True)
+<testtype xmlns:py="http://codespeak.net/lxml/objectify/pytype">
+  <head>
+    <references/>
+    <attribute py:pytype="str" ns="http://namespaces.zeit.de/CMS/document" name="last_modified_by">hans.wurst</attribute>
+  </head>
+  <body/>
+</testtype>
 
 Cleanup:
 
