@@ -411,6 +411,97 @@ too:
   <object_limit py:pytype="int">50</object_limit>
 </channel>
 
+When we change the order this is reflected:
+
+>>> related = zeit.cms.content.interfaces.IRelatedContent(content)
+>>> related.related = (repository['online']['2007']['01']['eta-zapatero'],
+...                    repository['online']['2007']['01']['Somalia'])
+>>> feed.updateMetadata(content)
+>>> print feed.xml_source
+<channel xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:py="http://codespeak.net/lxml/objectify/pytype">
+  <title py:pytype="str">Politik</title>
+  <container>
+    <block href="tct">
+      <supertitle xsi:nil="true"/>
+      <title xsi:nil="true"/>
+      <text xsi:nil="true"/>
+      <byline xsi:nil="true"/>
+      <short>
+        <title xsi:nil="true"/>
+        <text xsi:nil="true"/>
+      </short>
+      <homepage>
+        <title xsi:nil="true"/>
+        <text xsi:nil="true"/>
+      </homepage>
+      <references>
+        <reference type="intern" href="http://xml.zeit.de/online/2007/01/eta-zapatero"/>
+        <reference type="intern" href="http://xml.zeit.de/online/2007/01/Somalia"/>
+      </references>
+    </block>
+    <block href="art2">
+      <supertitle py:pytype="str">Fronkroisch</supertitle>
+      <title py:pytype="str">New Title</title>
+      <text py:pytype="str">In Frankreich wird massiv gestreikt. Doch den</text>
+      <byline py:pytype="str">Von Alain-Xavier Wurst</byline>
+      <short>
+        <title py:pytype="str">Frankreich</title>
+        <text py:pytype="str">Die Streiks werden Sarkozy nicht bezwingen</text>
+      </short>
+      <homepage>
+        <title py:pytype="str">HP Teaser Title</title>
+        <text py:pytype="str">HP Teaser Text</text>
+      </homepage>
+    </block>
+    <block href="art1"/>
+  </container>
+  <object_limit py:pytype="int">50</object_limit>
+</channel>
+
+We can also remove all relateds:
+
+>>> related = zeit.cms.content.interfaces.IRelatedContent(content)
+>>> related.related = ()
+>>> feed.updateMetadata(content)
+>>> print feed.xml_source
+<channel xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:py="http://codespeak.net/lxml/objectify/pytype">
+  <title py:pytype="str">Politik</title>
+  <container>
+    <block href="tct">
+      <supertitle xsi:nil="true"/>
+      <title xsi:nil="true"/>
+      <text xsi:nil="true"/>
+      <byline xsi:nil="true"/>
+      <short>
+        <title xsi:nil="true"/>
+        <text xsi:nil="true"/>
+      </short>
+      <homepage>
+        <title xsi:nil="true"/>
+        <text xsi:nil="true"/>
+      </homepage>
+      <references/>
+    </block>
+    <block href="art2">
+      <supertitle py:pytype="str">Fronkroisch</supertitle>
+      <title py:pytype="str">New Title</title>
+      <text py:pytype="str">In Frankreich wird massiv gestreikt. Doch den</text>
+      <byline py:pytype="str">Von Alain-Xavier Wurst</byline>
+      <short>
+        <title py:pytype="str">Frankreich</title>
+        <text py:pytype="str">Die Streiks werden Sarkozy nicht bezwingen</text>
+      </short>
+      <homepage>
+        <title py:pytype="str">HP Teaser Title</title>
+        <text py:pytype="str">HP Teaser Text</text>
+      </homepage>
+    </block>
+    <block href="art1"/>
+  </container>
+  <object_limit py:pytype="int">50</object_limit>
+</channel>
+
+
 When only one of the homepage teaser (title/text) is entered, we have only one
 node in the HTML:
 
@@ -433,10 +524,7 @@ node in the HTML:
         <title xsi:nil="true"/>
         <text xsi:nil="true"/>
       </homepage>
-      <references>
-        <reference type="intern" href="http://xml.zeit.de/online/2007/01/Somalia"/>
-        <reference type="intern" href="http://xml.zeit.de/online/2007/01/eta-zapatero"/>
-      </references>
+      <references/>
     </block>
     <block href="art2">
       <supertitle py:pytype="str">Fronkroisch</supertitle>
