@@ -42,7 +42,9 @@ We have not added any image, so no image is referenced:
 <channel xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:py="http://codespeak.net/lxml/objectify/pytype">
   <title/>
   <container>
-    <block href="dummy-content"/>
+    <block href="dummy-content">
+      <references/>
+    </block>
   </container>
   <object_limit py:pytype="int">50</object_limit>
 </channel>
@@ -67,6 +69,7 @@ Update the metadata of the feed. The image is now referenced:
   <title/>
   <container>
     <block href="dummy-content">
+     <references/>
       <image base-id="http://xml.zeit.de/image-group" type="jpg">
         <bu xsi:nil="true"/>
       </image>
@@ -88,6 +91,7 @@ When more than one image is referenced, only the first one will be in the feed:
   <title/>
   <container>
     <block href="dummy-content">
+     <references/>
       <image base-id="http://xml.zeit.de/image-group" type="jpg">
         <bu xsi:nil="true"/>
       </image>
@@ -117,6 +121,7 @@ Send out the checkin event:
 >>> print lxml.etree.tostring(content.xml, pretty_print=True)
 <content>
   <head>
+    <references/>
     <image xmlns:py="http://codespeak.net/lxml/objectify/pytype" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         title="Image title"
         base-id="http://xml.zeit.de/image-group" 
