@@ -127,6 +127,7 @@ Verify the source of the feed:
         <title xsi:nil="true"/>
         <text xsi:nil="true"/>
       </homepage>
+      <references/>
       <image src="http://xml.zeit.de/2006/DSC00109_2.JPG" type="JPG">
         <bu xsi:nil="true"/>
       </image>
